--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,18 @@ a {
   max-width: calc(100% - 48px);
 }
 
+.heading-lv2,
+.heading-lv2 a {
+  max-width: 577px;
+  color: #0d1111;
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: 1.33;
+}
 /* ============== Header ================ */
+header {
+  background: #fff;
+}
 .header-fixed {
   position: sticky;
   top: -44px;
@@ -55,7 +66,7 @@ header .action .action-btn {
   border-radius: 6px;
   border: 1px solid #1ebfc1;
 }
-header .action .action-btn:hover{
+header .action .action-btn:hover {
   color: #fff;
   background: var(--primary-color);
 }
@@ -75,4 +86,536 @@ header .nav ul a:hover {
   font-size: 1.6rem;
   font-weight: 600;
   text-shadow: 0.5px 0 0 currentColor;
+}
+/* ============== Hero ============ */
+.hero .body {
+  margin: 42px 0 79px;
+  display: flex;
+}
+/* =======Left====== */
+.hero .content-block {
+  width: 50%;
+}
+.hero .content-block .top-title {
+  margin-top: 93px;
+  color: #767e7e;
+  font-size: 1.4rem;
+}
+.hero .content-block .title {
+  margin-top: 18px;
+  color: #0d1111;
+  font-size: 6.2rem;
+  font-weight: 700;
+  line-height: 1.17;
+}
+.hero .content-block .desc {
+  margin-top: 46px;
+  color: #9da6a5;
+  font-size: 1.8rem;
+  line-height: 1.78;
+}
+.hero .content-block .cta-group {
+  margin-top: 52px;
+}
+.hero .cta-group .btn {
+  display: inline-block;
+  padding: 0 41px;
+  text-align: center;
+  min-width: 186px;
+  line-height: 68px;
+  color: var(--primary-color);
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border-radius: 14px;
+  border: 0.5px solid var(--primary-color);
+}
+.hero .cta-group .btn:hover {
+  color: #fff;
+  background: var(--primary-color);
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .cta-group .play-video {
+  margin-left: 50px;
+  width: 62px;
+  height: 62px;
+  border-radius: 62px;
+  background-color: #000;
+  background: #fff;
+  border: none;
+  box-shadow: 0px 22px 50px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .cta-group .play-video:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 0px 0px rgba(196, 26, 134, 0.5);
+  background: #eee;
+  transition: 0.5s;
+}
+/* ===== Right ====== */
+.hero .media-block {
+  width: 50%;
+  position: relative;
+}
+.hero .media-block .media {
+  width: 576px;
+  height: 631px;
+  object-fit: cover;
+}
+.hero .media-course {
+  position: relative;
+  position: absolute;
+  top: 149px;
+  left: -40px;
+  width: 157px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 18px;
+  background: #fefefd;
+  box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .media-course::after {
+  content: "";
+  width: 28px;
+  height: 4px;
+  position: absolute;
+  display: inline-block;
+  top: 45px;
+  left: 29px;
+  background: #fff;
+  border-radius: 999px;
+}
+.hero .media-course .detail {
+  color: #0d1111;
+  width: 55px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+/* .hero .media-schedules{
+  display: flex;
+} */
+.hero .media-schedules {
+  position: absolute;
+  /* bottom: 46px; */
+  top: 453px;
+  left: -65px;
+  width: 124px;
+  height: 132px;
+  border-radius: 24px;
+  background: #fff;
+  box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .media-schedules span {
+  display: inline-block;
+  color: #0d1111;
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 16px 35px 0;
+}
+.hero .media-schedules .schedules-icon {
+  margin: 16px 25px 0;
+  width: 74px;
+  height: 6px;
+  border-radius: 3px;
+  background: #edf1f5;
+}
+.hero .media-schedules .icon2 {
+  margin-top: 12px;
+}
+.hero .media-schedules .icon3 {
+  margin-top: 10px;
+}
+.hero .media-schedules .icon4 {
+  width: 26px;
+  height: 6px;
+  margin: 16px 24px auto;
+}
+.hero .avatar-block {
+  position: absolute;
+  top: 500px;
+  left: 324px;
+  width: 207px;
+  height: 90px;
+  border-radius: 24px;
+  background: #fefefd;
+  box-shadow: 0px 12px 80px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .avatar-block .detail {
+  display: inline-block;
+  color: #0d1111;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: normal;
+  margin: 17px 35px 0;
+}
+.hero .ava-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero .ava-list .ava {
+  margin-top: 8px;
+  margin-left: -7px;
+  width: 33px;
+  height: 33px;
+  border-radius: 33px;
+  object-fit: cover;
+}
+.hero .ava-list .ava:first-child {
+  margin-left: 0;
+}
+.hero .ava-list .ava-more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-color);
+}
+.hero .ava-more span {
+  color: #fff;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: normal;
+}
+/* ================== Feature =================== */
+.feature {
+  margin-top: 70px;
+}
+.feature .body-feature {
+  padding: 60px 0;
+  max-width: 1024px;
+}
+.feature .top-title-lv2 {
+  color: #767e7e;
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.feature .desc {
+  margin-top: 18px;
+  max-width: 590px;
+  color: #767e7e;
+  font-size: 1.8rem;
+  line-height: normal;
+}
+.feature .feature-list {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.feature .feature-list .item-title {
+  margin-top: 26px;
+  color: #0d1111;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: normal;
+}
+.feature .item .item-desc {
+  margin-top: 16px;
+  max-width: 168px;
+  color: #9da6a5;
+  font-size: 1.6rem;
+  line-height: 1.69;
+}
+.feature .item:nth-child(2) .item-desc {
+  max-width: 223px;
+}
+.feature .item:nth-child(3) .item-desc {
+  max-width: 224px;
+}
+/* ================= Course ================== */
+.course {
+  margin-top: 10px;
+}
+.course .body {
+  padding: 60px 0 184px;
+}
+.course .heading-lv2 {
+  margin-top: 18px;
+}
+.course .row-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 19px;
+}
+.course .row-top .desc {
+  max-width: 525px;
+  color: #767e7e;
+  font-size: 1.8rem;
+  line-height: 1.78;
+}
+.course .row-top a {
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+.course .course-list {
+  margin-top: 79px;
+  display: flex;
+  justify-content: space-between;
+}
+.course .course-list .thumb {
+  width: 359px;
+  height: 393px;
+  border-radius: 8px;
+  opacity: 0.5;
+  background: #d0efed;
+  object-fit: cover;
+}
+.course .course-list .course-item {
+  position: relative;
+}
+.course .course-item .course-detail {
+  position: absolute;
+  top: 322px;
+  left: 17px;
+  width: 325px;
+  height: 195px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 16px 90px 0px rgba(0, 0, 0, 0.05);
+}
+.course .course-detail .wrap-item {
+  padding: 18px 25px 0;
+}
+.course .wrap-item .heading-lv3 {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.course .wrap-item .cost {
+  margin-top: 16px;
+  color: #767e7e;
+  font-size: 1.6rem;
+  line-height: normal;
+}
+.course .wrap-item .cost {
+  display: flex;
+  align-items: center;
+}
+.course .cost span {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.course .course-detail span {
+  display: flex;
+  align-items: center;
+}
+.course .course-detail span::before {
+  display: inline-block;
+  content: "";
+  width: 6px;
+  height: 6px;
+  background: var(--primary-color);
+  border-radius: 50%;
+  margin: 0 10px;
+}
+.course .static {
+  margin-top: 18px;
+  display: flex;
+  align-items: center;
+}
+.course .static span {
+  color: #9da6a5;
+  font-size: 1.4rem;
+  line-height: normal;
+}
+/* ============== countdown ============ */
+.countdown {
+  margin-top: 205px;
+}
+.countdown .body {
+  max-width: 862px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.countdown .countdown-list {
+  display: flex;
+  justify-content: space-between;
+}
+.countdown .countdown-item .static {
+  color: #0d1111;
+  text-align: center;
+  font-size: 6.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.countdown .countdown-item .desc {
+  color: #767e7e;
+  text-align: center;
+  font-size: 18px;
+  line-height: normal;
+  margin-top: 11px;
+}
+/* =================== Feedback ================== */
+.feedback {
+  margin-top: 264px;
+}
+.feedback .body {
+  position: relative;
+  padding: 37px 0;
+}
+.feedback blockquote {
+  margin-top: 27px;
+  max-width: 419px;
+  color: #5d6564;
+  font-size: 3.2rem;
+  line-height: 1.5;
+}
+.feedback .desc {
+  display: flex;
+  align-items: center;
+  margin-top: 33px;
+  color: #767e7e;
+  font-size: 1.6rem;
+  line-height: normal;
+}
+.feedback .desc strong {
+  color: #070707;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: normal;
+}
+.feedback .desc::before {
+  content: "";
+  width: 8px;
+  height: 2px;
+  background: #070707;
+  display: inline-block;
+  margin-right: 6px;
+}
+.feedback .feedback-cta {
+  margin-top: 52px;
+  gap: 30px;
+  display: flex;
+}
+.feedback .feedback-cta .cta-btn-group {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background: #2ac9bf;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feedback .ava-fb {
+  object-fit: cover;
+  position: absolute;
+  width: 92px;
+  height: 92px;
+  border-radius: 50%;
+  top: 0;
+  left: 635px;
+}
+.feedback .ava-fb2 {
+  width: 78px;
+  height: 78px;
+  left: 491px;
+  top: 258px;
+}
+.feedback .ava-fb3 {
+  width: 78px;
+  height: 78px;
+  top: 403px;
+  left: 703px;
+}
+.feedback .ava-fb4 {
+  width: 78px;
+  height: 78px;
+  left: 1060px;
+  top: 374px;
+}
+.feedback .ava-fb5 {
+  width: 110px;
+  height: 110px;
+  left: 1060px;
+  top: 19px;
+}
+.feedback .ava-fb6 {
+  width: 235px;
+  height: 235px;
+  left: 764px;
+  top: 107px;
+}
+/* ===================== Admit ===================== */
+.admit {
+  margin-top: 130px;
+  padding: 76px 135px 88px;
+  background: #def6f5;
+}
+.admit .body {
+  display: flex;
+  align-items: center;
+}
+.admit .heading-lv2 {
+  max-width: 420px;
+  color: #070707;
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.admit .desc {
+  margin-top: 18px;
+  max-width: 397px;
+  color: #767e7e;
+  font-size: 1.8rem;
+  line-height: normal;
+  margin-right: 433px;
+}
+.admit .btn {
+  width: 186px;
+  height: 68px;
+  border-radius: 14px;
+  color: var(--primary-color);
+  text-align: center;
+  line-height: 68px;
+  background: #fff;
+  border: 1px solid;
+  flex-shrink: 0;
+}
+.admit .btn:hover {
+  color: #fff;
+  background: var(--primary-color);
+}
+.footer .row-top {
+  padding-top: 130px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .row-top .title {
+  color: #2e2e2e;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer .row-top li {
+  margin-top: 18px;
+  color: #535353;
+  font-size: 1.6rem;
+  line-height: normal;
+}
+.footer .row-top li:first-child{
+  margin-top: 26px;
+}
+.footer .list.list-column5 li a{
+  gap: 9px;
+  display: flex;
+  align-items: center;
+}
+.footer .cpr-block .copyright{
+  margin-top: 80px;
+  padding-bottom: 50px;
+  color: #B0B5B4;
+  font-size: 1.8rem;
+  line-height: normal;
+  text-align: center;
 }
